trunk/Archive2/cf/3bdded7f22d94c/output
main.cpp:21:9: error: cannot delete expression of type 'int'
        delete *Iter;
        ^      ~~~~~
1 error generated.
